JENA-1783: Replace use of Class.newInstance